@@ -3,9 +3,12 @@ from flask_sqlalchemy import SQLAlchemy
 from flask_migrate import Migrate
 from flask_moment import Moment
 from flask_bootstrap import Bootstrap
-from flask_login import LoginManager
+from flask_login import LoginManager, AnonymousUserMixin
 from config import Config
 from sqlalchemy import MetaData
+import logging
+from logging.handlers import RotatingFileHandler
+import os
 
 convention = {
     "ix": 'ix_%(column_0_label)s',
@@ -14,14 +17,36 @@ convention = {
     "fk": "fk_%(table_name)s_%(column_0_name)s_%(referred_table_name)s",
     "pk": "pk_%(table_name)s"
 }
+
 metadata = MetaData(naming_convention=convention)
 app = Flask(__name__)
 app.config.from_object(Config)
 db = SQLAlchemy(app, metadata=metadata)
+
+
+class Anonymous(AnonymousUserMixin):
+    def __init__(self):
+        self.current_aquarium = 1
+
+
 migrate = Migrate(app, db)
 login = LoginManager(app)
+login.anonymous_user = Anonymous
 moment = Moment(app)
 login.login_view = 'login'
 bootstrap = Bootstrap(app)
+
+if not app.debug:
+    if not os.path.exists('logs'):
+        os.mkdir('logs')
+    file_handler = RotatingFileHandler('logs/microblog.log', maxBytes=10240,
+                                       backupCount=10)
+    file_handler.setFormatter(logging.Formatter(
+        '%(asctime)s %(levelname)s: %(message)s [in %(pathname)s:%(lineno)d]'))
+    file_handler.setLevel(logging.INFO)
+    app.logger.addHandler(file_handler)
+
+    app.logger.setLevel(logging.INFO)
+    app.logger.info('Fish Track is starting')
 
 from app import routes, models
