@@ -41,10 +41,10 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for user in users %}
+                    {% for count in counts %}
                     <tr>
-                        <td>{{ user.name }}</td>
-                        <td>{{ user.feedings.count() }}</td>
+                        <td>{{ count.name }}</td>
+                        <td>{{ count.count }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
